; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_com.c_at91_serial_getc.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_com.c_at91_serial_getc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@us = common dso_local global i64 0, align 8
@port_detected = common dso_local global i32 0, align 4
@usa = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @at91_serial_getc() #0 {
  br label %1

1:                                                ; preds = %0, %11
  %2 = load i64, i64* @us, align 8
  %3 = trunc i64 %2 to i32
  %4 = call i64 @AT91F_US_RxReady(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i64, i64* @us, align 8
  %8 = trunc i64 %7 to i32
  %9 = call i64 @AT91F_US_GetChar(i32 %8)
  %10 = trunc i64 %9 to i32
  ret i32 %10

11:                                               ; preds = %1
  br label %1
}

declare dso_local i64 @AT91F_US_RxReady(i32) #1

declare dso_local i64 @AT91F_US_GetChar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
